Removed authors file && added skip_authors == true

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,9 @@
 [metadata]
 name = david
+author = David Yair
+# author = David Yair, Someone, Else
+author_email = john.doe@example.com
+# author_email = john.doe@example.com, someone@mail.com
 license=MIT
 requires-python = >=3.6
 description-file =
@@ -13,7 +17,12 @@ classifier =
     License :: OSI Approved :: MIT Software License
     Operating System :: OS Independent
     Programming Lauguage :: python
-	
+
+[pbr]
+skip_authors = True
+skip_changelog = False
+
+
 [files]
 packages =
     david
