Updated more metadata

--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,19 @@ classifier =
     License :: OSI Approved :: MIT Software License
     Operating System :: OS Independent
     Programming Lauguage :: python
+keywords =
+    global
+    functions
+
+
+[global]
+setup-hooks =
+    pbr.hooks.setup_hook
+
+
+[wheel]
+	universal = 1
+
 
 [pbr]
 skip_authors = True
