--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,9 @@ license=MIT
 requires-python = >=3.6
 description-file =
 	README.rst 
-home-page = https://github.com/Davis8988/python-pbr-test.git
+url = https://github.com/Davis8988/python-pbr-test.git
+project_urls =
+    Source Code = https://github.com/Davis8988/python-pbr-test.git
 classifier =
     Development Status :: 4 - Beta
     Environment :: Console
@@ -36,6 +38,11 @@ skip_authors = True
 skip_changelog = False
 
 
-[files]
-packages =
-    david
+[options]
+package_dir =
+    =src
+	
+[options.packages.find]
+where = src
+exclude =
+    tests
