--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,8 @@ setup-hooks =
 [wheel]
 	universal = 1
 
+[sdist]
+	formats = zip, gztar
 
 [pbr]
 skip_authors = True
@@ -45,4 +47,4 @@ package_dir =
 [options.packages.find]
 where = src
 exclude =
-    tests
+    tests 
